infer/tests/codetoanalyze/objc/errors/field_superclass/B.m
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import "B.h"

@implementation B

@end
